Shifts fixes

--- a/MES/WebContent/components/stationtracker/css/stationTracker.css
+++ b/MES/WebContent/components/stationtracker/css/stationTracker.css
@@ -258,7 +258,7 @@ color : black;
 .iconbuttonTeam .sapMBtnIcon{
 	color : #0085AD !important;
 	border-radius: 50%;
-	border: 1px solid #0085AD;
+	border: 2px solid #0085AD;
 }
 .buttonNotif .sapMBtnContent{
 	
